# BMI

./: .env  .env.example  .replit  .replit.start  .replit.workflows  DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE  QUICK_DEPLOY.md  README.md  app.py  create-activities.js  create-simple-activities.sh  direct-server.js  keep-alive.sh  manual-start.js  netlify.toml  package-lock.json  package.json  persistent-server.js  pyproject.toml  railway.json  render.yaml  replit.md  run-server.sh  run.sh  server.mjs  simple-preview.html  simple-server.js  start-app.mjs  start-server.sh  start.js  test-server.js  test-simple-server.js  troubleshoot-instructions.md  vercel.json
AI-Meeting-App/: .env.example  README.md  package-lock.json  package.json  replit.md
attached_assets/: Pasted--COMPREHENSIVE-DEALS-DETAILS-PAGE-ASSESSMENT-ENHANCEMENT-REPORT-Based-on-my-systematic-revie-1756068908477_1756068908478.txt  Pasted--Design-and-implement-a-Company-Details-page-view-for-our-AI-Lead-Generation-platform-integrated-wi-1755520809947_1755520809948.txt  Pasted--Ultra-Advanced-Features-Make-it-the-Most-Advanced-Analytics-Platform-Ever-Built-AI-First-A-1756058041636_1756058041636.txt  Pasted-Build-a-comprehensive-Account-Module-for-a-CRM-platform-that-surpasses-Salesforce-HubSpot-Zoho-Pi-1753391907267_1753391907268.txt  Pasted-Build-a-feature-rich-next-generation-Deal-Module-for-a-CRM-platform-designed-to-surpass-Salesforce-1753379588446_1753379588446.txt  Pasted-Build-a-modern-modular-Gamification-module-for-our-CRM-platform-This-module-must-be-deeply-integra-1753437124003_1753437124005.txt  (+15 more)
(+365 files in other folders)
